Doc/force-app/main/default/objects/User/fields/ASAP_Meet_with_User__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Meet_with_User__c</fullName>
    <formula>IF( Email &lt;&gt; &quot;&quot;,

   HYPERLINK(&quot;https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=&quot; &amp; Id,
              IMAGE(&quot;https://asap2.convoq.com/Images/Presence/Init.gif?lid=&quot; &amp; Id, 
                    &quot;Install ASAP to initiate online meetings.&quot;, 16, 15) 
              &amp; &quot;Meet with &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName  ),

   IMAGE(&quot;https://asap2.convoq.com/Images/Presence/Init.gif?lid=&quot; &amp; Id,
      &quot;No email address provided&quot;, 16, 15) &amp; &quot;No email address provided&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meet with User</label>
    <type>Text</type>
</CustomField>