Doc/force-app/main/default/objects/User/fields/Clarizen_Username__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Username__c</fullName>
    <description>Username in Clarizen for SSO</description>
    <label>Clarizen Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>