Doc/force-app/main/default/objects/User/fields/com_smartsheet__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>