Doc/force-app/main/default/objects/User/fields/com_smartsheet__Token_Expires__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Token_Expires__c</fullName>
    <label>Token Expires</label>
    <type>DateTime</type>
</CustomField>