Doc/force-app/main/default/objects/User/fields/Contact_Deletion_Notification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Deletion_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact_Deletion_Notification</label>
    <type>Checkbox</type>
</CustomField>