Doc/force-app/main/default/objects/User/fields/dsfs__DSProSFMembershipStatus__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
    <label>DSProSFMembershipStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>