Doc/force-app/main/default/objects/User/fields/dsfs__DSProSFPassword__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSProSFPassword__c</fullName>
    <label>DSProSFPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>