Doc/force-app/main/default/objects/User/fields/MDD_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>MDD_Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>MDD Employee ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>