Doc/force-app/main/default/objects/User/fields/Notify_me_upon_new_product_release__c.field-meta.xml
<CustomField>
    <fullName>Notify_me_upon_new_product_release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify me upon new product release</label>
    <type>Checkbox</type>
</CustomField>