Doc/force-app/main/default/objects/User/fields/Number_of_Customer_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customer_Accounts__c</fullName>
    <formula>IF(ispickval(Contact.Account.Type,&quot;Customer&quot;),+1,+0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Customer Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>