Doc/force-app/main/default/objects/User/fields/OP4I_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Sales_Segment__c</fullName>
    <description>To display OP4I Sales Segment of User. Created as part of BIZ-50210.</description>
    <label>OP4I Sales Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Op4I_Sales_Segment</valueSetName>
    </valueSet>
</CustomField>