Doc/force-app/main/default/objects/User/fields/Open_Cloud_Certified__c.field-meta.xml
<CustomField>
    <fullName>Open_Cloud_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Cloud Certified</label>
    <type>Checkbox</type>
</CustomField>