Doc/force-app/main/default/objects/User/fields/Opportunity_Deletion_Notification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Deletion_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object Deletion Notification</label>
    <type>Checkbox</type>
</CustomField>