Doc/force-app/main/default/objects/User/fields/OutOfOffice__c.field-meta.xml
<CustomField>
    <fullName>OutOfOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OutOfOffice</label>
    <type>Checkbox</type>
</CustomField>