Doc/force-app/main/default/objects/User/fields/PSA_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>PSA_Access_Level__c</fullName>
    <label>PSA Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full License</fullName>
            </value>
            <value>
                <fullName>Field License</fullName>
            </value>
            <value>
                <fullName>360 License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>