Doc/force-app/main/default/objects/User/fields/Sales_Team_Level__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Level__c</fullName>
    <description>Use this to group members of the Intapp sales team by level.</description>
    <inlineHelpText>Use this to group members of the Intapp sales team by level.</inlineHelpText>
    <label>Sales Team Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regional Leader</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>