Doc/force-app/main/default/objects/User/fields/User_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>User_18_Digit_ID__c</fullName>
    <description>BIZ-80450</description>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit User ID</label>
    <type>Text</type>
</CustomField>