Doc/force-app/main/default/objects/User/fields/User_Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Practice_Group__c</fullName>
    <description>If this person is a specialist in one Intapp Practice Group, which one?</description>
    <inlineHelpText>If this person is a specialist in one Intapp Practice Group, which one?</inlineHelpText>
    <label>User Practice Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
                <color>#E27001</color>
                <label>Risk</label>
            </value>
            <value>
                <fullName>Revenue</fullName>
                <color>#78C953</color>
                <label>Revenue</label>
            </value>
            <value>
                <fullName>Integration</fullName>
                <color>#0B6FCE</color>
                <label>Integration</label>
            </value>
            <value>
                <fullName>Multi-Practice</fullName>
                <color>#F3D904</color>
                <label>Multi-Practice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>