Doc/force-app/main/default/objects/User/fields/userEmailCustom__c.field-meta.xml
<CustomField>
    <fullName>userEmailCustom__c</fullName>
    <formula>Email</formula>
    <label>userEmailCustom</label>
    <type>Text</type>
</CustomField>