Doc/force-app/main/default/objects/User/fields/Vacation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Start_Date__c</fullName>
    <label>Vacation Start Date</label>
    <type>Date</type>
</CustomField>