Doc/force-app/main/default/objects/User/fields/Walls_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Walls_Expertise__c</fullName>
    <formula>TEXT(Contact.Walls_Expertise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walls Expertise</label>
    <type>Text</type>
</CustomField>