Doc/force-app/main/default/objects/User/fields/WebEx_Username__c.field-meta.xml
<CustomField>
    <fullName>WebEx_Username__c</fullName>
    <label>WebEx Username</label>
    <length>128</length>
    <type>Text</type>
</CustomField>