Doc/force-app/main/default/objects/User/fields/Wiki_Username__c.field-meta.xml
<CustomField>
    <fullName>Wiki_Username__c</fullName>
    <label>Wiki Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>