Doc/force-app/main/default/objects/User/listViews/Active_Intapp_Users_without_Roles.listView-meta.xml
<ListView>
    <fullName>Active_Intapp_Users_without_Roles</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>PSA_Access_Level__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>OHV,Chatter Free User</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Active Intapp Users without Roles</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>