Doc/force-app/main/default/objects/User/listViews/Contract_CRM_Ops.listView-meta.xml
<ListView>
    <fullName>Contract_CRM_Ops</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Contracts / CRM Ops</value>
    </filters>
    <label>Contract/CRM Ops</label>
</ListView>