Doc/force-app/main/default/objects/User/listViews/dsfs__DocuSignInactiveUsers.listView-meta.xml
<ListView>
    <fullName>dsfs__DocuSignInactiveUsers</fullName>
    <booleanFilter>(1 or 2) and 3 and 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsfs__DSProSFUsername__c</field>
        <operation>equals</operation>
        <value>null</value>
    </filters>
    <filters>
        <field>dsfs__DSProSFUsername__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>OHV</value>
    </filters>
    <label>DocuSign Inactive Users</label>
    <language>en_US</language>
</ListView>