Doc/force-app/main/default/objects/User/listViews/Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Inactive_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Stefanie</value>
    </filters>
    <label>Inactive Users</label>
    <language>en_US</language>
</ListView>